                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.3


  *) [TS-1858] Fix redefinition of timersub on Solaris

  *) [TS-1861] Build fails with reclaimable freelist enabled.

  *) [TS-1860] cacheurl doesn't compile on platforms with pcre/pcre.h
   (e.g. solaris).

  *) [TS-1729] Fix channel_stats to compile on various Unixen. Note that this
   is still IPV4 only.

  *) [TS-1839] We fail "make test" on some platforms, due to install
   directory missing.

  *) [TS-1856] Replace SIZE() macro with COUNTOF() and countof().

  *) [TS-1853] Fix formatting in logstats to be consistenly 2 decimals.

  *) [TS-1852] Fix missing AC_PROG_SED on CentOS 5.9.

  *) [TS-1717] Fix the static build as much as possible.

  *) [TS-1851] Turn HostDBInfo back into a POD type.

  *) [TS-1850] Improve SSL certificate error reporting.

  *) [TS-1848] Fix MIMEHdr::field_value_set_int64() wrapper.
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-986] experimental.h has a dependency on netinet/net.h (for
  struct in_addr).

  *) [TS-1794 Replace all usage of ts_debug_assert() with ts_assert().

  *) [TS-1834] Force absolute paths to fix logstats unit tests.

  *) [TS-1817] Use the libaio interface to the Linux AIO system calls.

  *) [TS-1721] Integrate tstop into the autotools build.

  *) [TS-1706] Fix documentation for Config::Records.pm.

  *) [TS-1218] Make traffic_cop tracing configureable at build time.

  *) [TS-1846] Remove TestHook.

  *) [TS-1844] Efficient HostDB file allocation.

  *) [TS-1586] Fix the SPDY plugin build under clang on Linux.

  *) [TS-1053] Make combo_handler compiler. Author: Conan Wang.

  *) [TS-1792] Cleanup extremely verbvose debug text on Vary headers.

  *) [TS-1819] Guarantee hwloc initialization.

  *) [TS-1830] Add getpagesize library function.

  *) [TS-1801] Remove proxy.config.net.throttle_enabled, it's an artifact