@@ -1152,11 +1152,7 @@ failed:
         // Startup the periodic events to process entries in
         //  external_incoming_control.
 
-#if defined(freebsd)
-        int procs_online = 1;
-#else
-        int procs_online = sysconf(_SC_NPROCESSORS_ONLN);
-#endif
+        int procs_online = ink_number_of_processors();
         int total_callbacks = min(procs_online, MAX_COMPLETION_CALLBACK_EVENTS);
         for (int n = 0; n < total_callbacks; ++n) {
           callout_cont[n] = NEW(new ClusterCalloutContinuation(this));
